Adding Xamarin Files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 ################################################################################
 
 /Xamarin/DroneFishing/DroneFishing.Android/bin/Debug
+/Xamarin/DroneFishing/DroneFishing.Android/obj/Debug/DroneFishing.Android.csproj.FileListAbsolute.txt
+/Xamarin/DroneFishing/DroneFishing.Android/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Xamarin/DroneFishing/DroneFishing.Android/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Xamarin/DroneFishing/DroneFishing.Android/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Xamarin/DroneFishing/DroneFishing.Console/obj/Debug
+/Xamarin/DroneFishing/packages
+/Xamarin/DroneFishing/DroneFishing.Android/obj/Debug
+/Xamarin/DroneFishing/DroneFishing.Core/obj/Debug
+/Xamarin/DroneFishing/DroneFishing.Console/bin/Debug
